<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/detail1"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainImg" />

    <ImageView
        android:id="@+id/mainImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imgErr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main"
        tools:srcCompat="@drawable/main" />

    <ImageButton
        android:id="@+id/returnBtn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/imgErr"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <Button
        android:id="@+id/stop"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/stop_button"
        android:text="@string/stop"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail" />

    <Button
        android:id="@+id/left"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/left_button"
        android:text="@string/left"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintEnd_toStartOf="@+id/stop"
        app:layout_constraintTop_toTopOf="@+id/stop"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/back"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/back_button"
        android:text="@string/back"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/stop"
        app:layout_constraintStart_toStartOf="@+id/stop"
        app:layout_constraintTop_toBottomOf="@+id/stop" />

    <Button
        android:id="@+id/right"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:background="@drawable/right_button"
        android:text="@string/right"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/stop"
        app:layout_constraintStart_toEndOf="@+id/stop"
        app:layout_constraintTop_toTopOf="@+id/stop" />

    <Button
        android:id="@+id/go"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/go_button"
        android:text="@string/go"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/stop"
        app:layout_constraintEnd_toEndOf="@+id/stop"
        app:layout_constraintStart_toStartOf="@+id/stop" />

    <Button
        android:id="@+id/round"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="40dp"
        android:text="@string/round"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/fast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/fast"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/slow"
        app:layout_constraintEnd_toStartOf="@+id/slow"
        app:layout_constraintTop_toTopOf="@+id/slow" />

    <Button
        android:id="@+id/slow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/slow"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>