<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/inputID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="input ID"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ID"
        app:layout_constraintTop_toBottomOf="@+id/mainImg"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/ID"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/id"
        app:layout_constraintBottom_toBottomOf="@+id/inputID"
        app:layout_constraintEnd_toStartOf="@+id/inputID"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputID" />

    <EditText
        android:id="@+id/inputPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="input PW"
        android:ems="10"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/PW"
        app:layout_constraintTop_toBottomOf="@+id/inputID"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/PW"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pw"
        app:layout_constraintBottom_toBottomOf="@+id/inputPW"
        app:layout_constraintEnd_toStartOf="@+id/inputPW"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputPW" />

    <ImageView
        android:id="@+id/mainImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/imgErr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main"
        tools:srcCompat="@drawable/main" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputPW" />
</androidx.constraintlayout.widget.ConstraintLayout>